Change to structurizr-lite