@@ -4,11 +4,7 @@ WORKDIR /build
 
 RUN apk add --no-cache curl tar
 
-RUN curl -L -# -O https://github.com/structurizr/onpremises/releases/download/v2025.11.01/structurizr-onpremises.war
-
-RUN curl -L -# -O https://dlcdn.apache.org/tomcat/tomcat-10/v10.1.48/bin/apache-tomcat-10.1.48.tar.gz \
-    && tar -xzf apache-tomcat-10.1.48.tar.gz \
-    && mv apache-tomcat-10.1.48 /usr/local/tomcat
+RUN curl -L -# -O https://github.com/structurizr/lite/releases/download/v2025.11.01/structurizr-lite.war
 
 FROM bellsoft/liberica-runtime-container:jdk-21-musl
 
@@ -16,19 +12,10 @@ ENV PORT=3000
 
 RUN apk add --no-cache graphviz
 
-COPY --from=native_builder /usr/local/tomcat /usr/local/tomcat
-
-WORKDIR /usr/local/tomcat
-
-RUN sed -i 's/port="8080"/port="${http.port}" maxPostSize="10485760"/' conf/server.xml \
-    && echo 'export CATALINA_OPTS="-Xms512M -Xmx512M -Dhttp.port=$PORT -Dstructurizr.dataDirectory=/usr/local/structurizr --add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED"' > bin/setenv.sh \
-    && chmod +x bin/*.sh
-
 ENV STRUCTURIZR_DATA_DIRECTORY=/usr/local/structurizr
 
-RUN rm -rf /usr/local/tomcat/webapps/ROOT*
-COPY --from=native_builder /build/structurizr-onpremises.war /usr/local/tomcat/webapps/ROOT.war
+COPY --from=native_builder /build/structurizr-lite.war /usr/local/structurizr-lite.war
 
 EXPOSE ${PORT}
 
-CMD ["/usr/local/tomcat/bin/catalina.sh", "run"]
+CMD ["java", "-Dserver.port=${PORT}", "-jar", "/usr/local/structurizr-lite.war"]
